--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   },
   "homepage": "https://github.com/eastman81/mongoScraper#readme",
   "dependencies": {
+    "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "mongoose": "^4.13.6",
+    "morgan": "^1.9.0",
+    "nodemon": "^1.12.5",
     "request": "^2.83.0"
   }
 }
